# snippets2

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/snippets2/: __init__.py  ezplot.py  snippets2.py  utils.py
tests/: test_df.csv  test_snippets2.py
