[tool.poetry]
name = "snippets2"
version = "0.4.0"
description = "A package for customised Oodle plotting"
authors = ["Ezra Citron"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
plotnine = "^0.8.0"
pandas = "^1.1.5"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
